# ultra-avs-monitor

./: .gitignore  Cargo.toml  docker-compose.yml  setup_and_build.sh
data/: bids.jsonl
grafana/provisioning/dashboards/: boost-monitor-dashboard.json  dashboard.yml
prometheus/: prometheus.yml
src/: bid_manager.rs  config.rs  errors.rs  file_writer.rs  lib.rs  main.rs  relay_client.rs  relay_clients.rs  relay_wrapper.rs  test_helpers.rs  types.rs
src/relay/: client.rs  mod.rs
src/websocket/: connection.rs  mod.rs  server.rs
tests/: bid_manager_proptests.rs  bid_processing.rs  relay_connections.rs  service_lifecycle.rs
