[package]
name = "ultra-avs-monitor"
version = "0.1.0"
edition = "2021"


[lib]
name = "ultra_avs_monitor"
path = "src/lib.rs"

[[bin]]
name = "avs_boost_monitor"
path = "src/main.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
httpmock = "0.7.0"
test-log = "0.2.0"
proptest = { version = "1.4.0" } # Enable tokio feature
proptest-derive = "0.4.0"

[dependencies]
url = "2.5.0" # Add url crate for parsing in main.rs/errors.rs
thiserror = "1.0"
humantime-serde = "1.1"
async-trait = "0.1"
clap = { version = "4.3", features = ["derive"] } # Keep version 4.3, seems specific
tempfile = "3.8"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alloy-primitives = "0.7"
alloy-rpc-types = "0.7"
alloy-provider = "0.1" # Add provider
alloy-rpc-client = "0.1.0" # Keep existing version
alloy-transport-http = "0.1.0" # Keep existing version
futures = "0.3.29"
tokio-stream = "0.1.14"
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"
uuid = { version = "1.6.1", features = ["v4"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = "0.4"
