[package]
name = "ultra-avs-monitor"
version = "0.1.0"
edition = "2021"


[lib]
name = "ultra_avs_monitor"
path = "src/lib.rs"

[[bin]]
name = "avs_boost_monitor"
path = "src/main.rs"

[[bin]]
name = "hex_to_decimal_converter"
path = "src/bin/hex_to_decimal_converter.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
httpmock = "0.7.0"
test-log = "0.2.0"
proptest = { version = "1.4.0" } # Enable tokio feature
proptest-derive = "0.5.1"

[dependencies]
url = "2.5.0"
thiserror = "2.0.12"
humantime-serde = "1.1"
async-trait = "0.1"
clap = { version = "4.3", features = ["derive"] } # Keep version 4.3, seems specific
tempfile = "3.8"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alloy-primitives = "1.1.0"
alloy-rpc-types = "0.15.10"
alloy-provider = "0.15.10" # Add provider
alloy-rpc-client = "0.15.10"
alloy-transport-http = "0.15.10"
futures = "0.3.29"
tokio-stream = "0.1.14"
tokio-tungstenite = "0.26.2"
futures-util = "0.3.30"
uuid = { version = "1.6.1", features = ["v4"] }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.0"
axum = "0.8.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = "0.4"
